Endpoints refactor
        I've added the board and user labels endpoints in order to allow
        access to the other MS function.
        Reported by: Ronald Sarmiento <roasarmientoga@unal.edu.co>
